# monkey-ssh

./: .gitignore  .gitmodules  LICENSE  README.md  build_all.sh  docker-compose.yml  gate.sh  l-vdsina.sh  mount-vdsina.sh  readme.md  ssh-pushik.sh  ssh-vdsina.sh
dock/: Dockerfile
master/: CMakeLists.txt  main.cpp
monkey-end-side/: CMakeLists.txt  main.cpp
monkey-middle-side/: CMakeLists.txt  keyval.cpp  keyval.h  main.cpp  monkey_aes.cpp  monkey_aes.h  monkey_rsa.cpp  monkey_rsa.h  node_server.cpp  node_server.h  node_socket.cpp  node_socket.h  settings.cpp  settings.h  side_socket.cpp  side_socket.h
monkey-node/: CMakeLists.txt  main.cpp  node_server.cpp  node_socket.cpp
monkey-shared/: keyval.cpp  monkey_aes.h  settings.cpp
node/: CMakeLists.txt  main.cpp  node_server.cpp  node_server.h  node_socket.cpp  node_socket.h
phony/: CMakeLists.txt  main.cpp
run-once/: CMakeLists.txt  main.cpp
shared/: monkey_aes.cpp  monkey_aes.h  monkey_rsa.cpp  settings.cpp  settings.h  side_socket.cpp  side_socket.h
slave/: CMakeLists.txt  main.cpp
